--- a/index.html
+++ b/index.html
@@ -133,19 +133,56 @@
 
   <script>
     const cumplidos = [
-      "Tienes una sonrisa que alegra el día 🌞",
-      "Eres más brillante que un millón de estrellas ✨",
-      "Tu forma de ser es simplemente única 💕",
-      "Contigo todo es más divertido 😄",
-      "Tu energía ilumina cualquier lugar 🌷",
-      "Eres una persona increíble, nunca lo dudes 💫",
-      "Tu risa debería ser patrimonio de la humanidad 😂",
-      "Siempre haces que los demás se sientan mejor 💗",
-      "Tienes una vibra que da paz 🕊️",
-      "Eres arte en forma humana 🎨",
-      "Tus ojos cuentan historias que me encantan 👀",
-      "Eres dulce como el mejor postre 🍓",
-      "Tu mirada tiene magia propia ✨"
+       "Tienes una sonrisa que alegra cualquier día 🌞",
+  "Eres más brillante que un millón de estrellas ✨",
+  "Tu forma de ser es simplemente única 💕",
+  "Contigo todo es más divertido 😄",
+  "Tu energía ilumina cualquier lugar 🌷",
+  "Eres una persona increíble, nunca lo dudes 💫",
+  "Tu risa debería ser patrimonio de la humanidad 😂",
+  "Siempre haces que los demás se sientan mejor 💗",
+  "Tienes una vibra que da paz 🕊️",
+  "Eres arte en forma humana 🎨",
+  "Tus ojos cuentan historias que me encantan 👀",
+  "Eres dulce como el mejor postre 🍓",
+  "Tu mirada tiene magia propia ✨",
+  "Eres un rayito de sol incluso en días nublados 🌤️",
+  "Tienes un corazón gigante y eso se nota 💖",
+  "Eres increíblemente valiente, aunque no siempre lo veas 🦋",
+  "Tu alegría es contagiosa 😍","Eres un motivo para sonreír todos los días 😊",
+  "Tu voz tiene un efecto mágico en quienes te escuchan 🎶",
+  "Simplemente eres genial tal y como eres 🌟",
+  "Tienes un corazón que brilla más que el oro 💛",
+  "Eres como un abrazo cálido en un día frío 🤗",
+  "Tu entusiasmo es contagioso y lindo 🌸",
+  "Eres la definición de buena onda 😌",
+  "Siempre sabes cómo alegrar un lugar 🌈",
+  "Eres más dulce que cualquier chocolate 🍫",
+  "Tu sonrisa podría iluminar ciudades enteras 🌆",
+  "Eres creatividad en estado puro 🎨",
+  "Tu risa es música para quienes te rodean 🎵",
+  "Eres luz en los días grises 💡",
+  "Tienes un encanto natural que nadie puede ignorar ✨",
+  "Eres un arcoíris después de la tormenta 🌈",
+  "Tu presencia hace que todo sea más bonito 🌷",
+  "Eres una inspiración sin siquiera intentarlo 💫",
+  "Siempre dejas una huella positiva 🌟", "Eres única, y eso te hace especial 💖",
+  "Tu corazón es tan grande como tu sonrisa 💕",
+  "Eres magia pura, no lo olvides ✨",
+  "Tu forma de ser da alegría a quienes te rodean 😄",
+  "Eres dulce, fuerte y hermosa al mismo tiempo 🌸",
+  "Tu luz interna es más brillante que cualquier estrella 🌟",
+  "Eres un remanso de paz en medio del caos 🕊️",
+  "Tu risa es un regalo que todos quieren recibir 🎁",
+  "Eres un soplo de aire fresco 💨💖",
+  "Tu energía positiva hace que todo sea mejor ✨",
+  "Eres un sol que nunca deja de brillar 🌞",
+  "Tu ternura derrite corazones 💗",
+  "Eres un abrazo para el alma 🤗",
+  "Tu bondad es un ejemplo para todos 💛",
+  "Eres la definición de alegría pura 😍",
+  "Cada día contigo es un día más bonito 🌷",
+  "Tu sonrisa hace que el mundo sea mejor 💖"
     ];
 
     const btn = document.getElementById('btn');
