--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
   </div>
 
   <script>
-    const cumplidos = [
-       "Tienes una sonrisa que alegra cualquier día 🌞",
+const cumplidos = [
+  "Tienes una sonrisa que alegra cualquier día 🌞",
   "Eres más brillante que un millón de estrellas ✨",
   "Tu forma de ser es simplemente única 💕",
   "Contigo todo es más divertido 😄",
@@ -149,7 +149,8 @@
   "Eres un rayito de sol incluso en días nublados 🌤️",
   "Tienes un corazón gigante y eso se nota 💖",
   "Eres increíblemente valiente, aunque no siempre lo veas 🦋",
-  "Tu alegría es contagiosa 😍","Eres un motivo para sonreír todos los días 😊",
+  "Tu alegría es contagiosa 😍",
+  "Eres un motivo para sonreír todos los días 😊",
   "Tu voz tiene un efecto mágico en quienes te escuchan 🎶",
   "Simplemente eres genial tal y como eres 🌟",
   "Tienes un corazón que brilla más que el oro 💛",
@@ -166,7 +167,8 @@
   "Eres un arcoíris después de la tormenta 🌈",
   "Tu presencia hace que todo sea más bonito 🌷",
   "Eres una inspiración sin siquiera intentarlo 💫",
-  "Siempre dejas una huella positiva 🌟", "Eres única, y eso te hace especial 💖",
+  "Siempre dejas una huella positiva 🌟",
+  "Eres única, y eso te hace especial 💖",
   "Tu corazón es tan grande como tu sonrisa 💕",
   "Eres magia pura, no lo olvides ✨",
   "Tu forma de ser da alegría a quienes te rodean 😄",
@@ -183,7 +185,8 @@
   "Eres la definición de alegría pura 😍",
   "Cada día contigo es un día más bonito 🌷",
   "Tu sonrisa hace que el mundo sea mejor 💖"
-    ];
+];
+
 
     const btn = document.getElementById('btn');
     const out = document.getElementById('cumplido');
