--- a/index.html
+++ b/index.html
@@ -133,58 +133,58 @@
 
   <script>
 const cumplidos = [
-  "Tienes una sonrisa que alegra cualquier día 🌞",
-  "Eres más brillante que un millón de estrellas ✨",
-  "Tu forma de ser es simplemente única 💕",
-  "Contigo todo es más divertido 😄",
-  "Tu energía ilumina cualquier lugar 🌷",
-  "Eres una persona increíble, nunca lo dudes 💫",
-  "Tu risa debería ser patrimonio de la humanidad 😂",
-  "Siempre haces que los demás se sientan mejor 💗",
-  "Tienes una vibra que da paz 🕊️",
-  "Eres arte en forma humana 🎨",
-  "Tus ojos cuentan historias que me encantan 👀",
-  "Eres dulce como el mejor postre 🍓",
-  "Tu mirada tiene magia propia ✨",
-  "Eres un rayito de sol incluso en días nublados 🌤️",
-  "Tienes un corazón gigante y eso se nota 💖",
-  "Eres increíblemente valiente, aunque no siempre lo veas 🦋",
-  "Tu alegría es contagiosa 😍",
-  "Eres un motivo para sonreír todos los días 😊",
-  "Tu voz tiene un efecto mágico en quienes te escuchan 🎶",
-  "Simplemente eres genial tal y como eres 🌟",
-  "Tienes un corazón que brilla más que el oro 💛",
-  "Eres como un abrazo cálido en un día frío 🤗",
-  "Tu entusiasmo es contagioso y lindo 🌸",
-  "Eres la definición de buena onda 😌",
+  "Eres increíble tal como eres 💖",
+  "Tu sonrisa hace que todo sea mejor 😄",
+  "Tienes un estilo que siempre sorprende 👏",
+  "Eres divertida y contagias alegría 🌟",
+  "Tu mirada tiene algo que encanta 👀",
+  "Eres fuerte y eso inspira 💪",
+  "Tu risa es un regalo para quienes te rodean 🎁",
+  "Eres dulce sin esfuerzo 🍓",
   "Siempre sabes cómo alegrar un lugar 🌈",
-  "Eres más dulce que cualquier chocolate 🍫",
-  "Tu sonrisa podría iluminar ciudades enteras 🌆",
-  "Eres creatividad en estado puro 🎨",
-  "Tu risa es música para quienes te rodean 🎵",
+  "Eres única y eso te hace especial 💕",
+  "Tu energía es imposible de ignorar ✨",
+  "Eres encantadora sin siquiera intentarlo 😍",
+  "Tu forma de ser ilumina cualquier día 🌞",
+  "Eres creativa y llena de ideas geniales 🎨",
+  "Tu alegría es contagiosa y linda 😄",
+  "Eres como un abrazo cálido en un día frío 🤗",
+  "Tu personalidad brilla más que cualquier estrella ⭐",
+  "Eres divertida y siempre haces sonreír 😌",
+  "Tu estilo y tu forma de ser combinan perfecto 👗",
+  "Eres un soplo de aire fresco 💨",
+  "Tu risa podría alegrar cualquier habitación 🎶",
+  "Eres dulce, fuerte y valiente 💖",
+  "Siempre sabes cómo hacer sentir bien a los demás 🌸",
   "Eres luz en los días grises 💡",
-  "Tienes un encanto natural que nadie puede ignorar ✨",
+  "Tu sonrisa podría iluminar ciudades enteras 🌆",
+  "Eres un rayito de sol incluso en días nublados 🌤️",
+  "Tu entusiasmo es contagioso y lindo 🌷",
   "Eres un arcoíris después de la tormenta 🌈",
-  "Tu presencia hace que todo sea más bonito 🌷",
-  "Eres una inspiración sin siquiera intentarlo 💫",
-  "Siempre dejas una huella positiva 🌟",
-  "Eres única, y eso te hace especial 💖",
-  "Tu corazón es tan grande como tu sonrisa 💕",
-  "Eres magia pura, no lo olvides ✨",
-  "Tu forma de ser da alegría a quienes te rodean 😄",
-  "Eres dulce, fuerte y hermosa al mismo tiempo 🌸",
-  "Tu luz interna es más brillante que cualquier estrella 🌟",
-  "Eres un remanso de paz en medio del caos 🕊️",
-  "Tu risa es un regalo que todos quieren recibir 🎁",
-  "Eres un soplo de aire fresco 💨💖",
-  "Tu energía positiva hace que todo sea mejor ✨",
+  "Tu presencia hace que todo sea más bonito 🌟",
+  "Eres inspiración sin siquiera intentarlo 💫",
+  "Tu corazón es gigante y lleno de amor 💛",
+  "Eres magia pura ✨",
+  "Tu forma de ser hace que todos se sientan mejor 😄",
+  "Eres un regalo que alegra la vida de otros 🎁",
+  "Tu mirada transmite paz y calma 🕊️",
+  "Eres única, y eso te hace brillante 💖",
+  "Tu risa es música para quien la escucha 🎵",
+  "Eres creatividad en acción 🎨",
+  "Tu alegría hace que los días normales sean especiales 🌸",
+  "Eres dulce como el mejor postre 🍫",
+  "Tu bondad se nota en todo lo que haces 💛",
+  "Eres como un abrazo que calma el alma 🤗",
+  "Tu energía positiva hace todo más bonito ✨",
   "Eres un sol que nunca deja de brillar 🌞",
   "Tu ternura derrite corazones 💗",
-  "Eres un abrazo para el alma 🤗",
-  "Tu bondad es un ejemplo para todos 💛",
-  "Eres la definición de alegría pura 😍",
-  "Cada día contigo es un día más bonito 🌷",
-  "Tu sonrisa hace que el mundo sea mejor 💖"
+  "Eres inspiración para quienes te rodean 🌷",
+  "Tu presencia ilumina cualquier lugar 🌟",
+  "Eres un soplo de felicidad 💨",
+  "Tu sonrisa es contagio de alegría 😍",
+  "Eres luz y alegría al mismo tiempo 🌈",
+  "Tu personalidad es encantadora y genuina 💖",
+  "Eres un motivo para sonreír todos los días 😊"
 ];
 
 
