--- a/index.html
+++ b/index.html
@@ -203,3 +203,6 @@ const cumplidos = [
   </script>
 </body>
 </html>
+<div class="mensaje-inicial">
+  💌 Hola Nicool, esta página es para recordarte lo especial que eres.🌸
+</div>
