--- a/index.html
+++ b/index.html
@@ -11,15 +11,43 @@
       --accent: #ff4da6;
       --muted: #4b4b4b;
     }
+
     *{box-sizing:border-box;margin:0;padding:0}
     body{
       min-height:100vh;
       display:flex;
+      flex-direction:column;
       align-items:center;
       justify-content:center;
       font-family: "Poppins", system-ui, sans-serif;
       background: linear-gradient(135deg,var(--bg1),var(--bg2));
-      overflow:hidden;
+      overflow-x:hidden;
+      padding:20px;
+    }
+
+    /* Mensaje inicial animado */
+    .mensaje-inicial {
+      width: clamp(280px, 80vw, 720px);
+      margin-bottom: 16px;
+      padding: 16px 22px;
+      background: rgba(255, 77, 166, 0.15);
+      border-radius: 14px;
+      text-align: center;
+      font-size: clamp(0.95rem, 2.3vw, 1.1rem);
+      color: #ff4da6;
+      font-weight: 500;
+      box-shadow: 0 4px 12px rgba(255,77,166,0.2);
+      opacity: 0;
+      transform: translateY(-30px);
+      animation: aparecer 1s ease forwards;
+      animation-delay: 0.3s;
+    }
+
+    @keyframes aparecer {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     .card{
@@ -28,9 +56,15 @@
       border-radius:18px;
       padding:28px;
       text-align:center;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+      box-shadow: 0 15px 40px rgba(0,0,0,0.08);
       backdrop-filter: blur(6px);
       position:relative;
+      animation: cardFade 1s ease forwards;
+      opacity: 0;
+    }
+
+    @keyframes cardFade {
+      to { opacity: 1; }
     }
 
     h1{
@@ -57,11 +91,12 @@
       border-radius:12px;
       font-size:1rem;
       cursor:pointer;
-      transition: transform .15s ease, box-shadow .15s ease;
-      box-shadow: 0 6px 18px rgba(255,77,166,0.24);
+      transition: transform .2s ease, box-shadow .2s ease;
+      box-shadow: 0 6px 20px rgba(255,77,166,0.24);
+      margin-top:10px;
     }
-    .btn:active{ transform: translateY(2px) }
-    .btn:hover{ box-shadow: 0 10px 30px rgba(255,77,166,0.28) }
+    .btn:active{ transform: translateY(2px) scale(0.98); }
+    .btn:hover{ box-shadow: 0 10px 30px rgba(255,77,166,0.28); transform: scale(1.03); }
 
     #cumplido{
       margin-top:22px;
@@ -71,11 +106,11 @@
       justify-content:center;
       font-size:clamp(1rem,2.5vw,1.2rem);
       color:#333;
-      padding:10px 16px;
+      padding:14px 18px;
       border-radius:12px;
-      background: rgba(255,255,255,0.75);
-      box-shadow: inset 0 1px 0 rgba(255,255,255,0.6);
-      opacity:1;
+      background: rgba(255,255,255,0.85);
+      box-shadow: inset 0 2px 4px rgba(255,255,255,0.6);
+      opacity:0;
       transition: transform 0.5s ease, opacity 0.5s ease;
     }
 
@@ -113,10 +148,17 @@
     @media (max-width:420px){
       .card{ padding:20px;border-radius:14px }
       #cumplido{ font-size:1rem; min-height:64px }
+      .mensaje-inicial{ font-size:1rem; padding:12px 16px }
     }
   </style>
 </head>
 <body>
+
+  <!-- Mensaje inicial animado -->
+  <div class="mensaje-inicial">
+    💌 Hola Nicool, esta página es para recordarte lo especial que eres. ¡Disfruta cada cumplido! 🌸
+  </div>
+
   <div class="card">
     <h1>💖 Generador de cumplidos para Nicool 💖</h1>
     <div class="subtitle">para la niña con los ojitos más hermosos ✨</div>
@@ -132,61 +174,60 @@
   </div>
 
   <script>
-const cumplidos = [
-  "Eres increíble tal como eres 💖",
-  "Tu sonrisa hace que todo sea mejor 😄",
-  "Tienes un estilo que siempre sorprende 👏",
-  "Eres divertida y contagias alegría 🌟",
-  "Tu mirada tiene algo que encanta 👀",
-  "Eres fuerte y eso inspira 💪",
-  "Tu risa es un regalo para quienes te rodean 🎁",
-  "Eres dulce sin esfuerzo 🍓",
-  "Siempre sabes cómo alegrar un lugar 🌈",
-  "Eres única y eso te hace especial 💕",
-  "Tu energía es imposible de ignorar ✨",
-  "Eres encantadora sin siquiera intentarlo 😍",
-  "Tu forma de ser ilumina cualquier día 🌞",
-  "Eres creativa y llena de ideas geniales 🎨",
-  "Tu alegría es contagiosa y linda 😄",
-  "Eres como un abrazo cálido en un día frío 🤗",
-  "Tu personalidad brilla más que cualquier estrella ⭐",
-  "Eres divertida y siempre haces sonreír 😌",
-  "Tu estilo y tu forma de ser combinan perfecto 👗",
-  "Eres un soplo de aire fresco 💨",
-  "Tu risa podría alegrar cualquier habitación 🎶",
-  "Eres dulce, fuerte y valiente 💖",
-  "Siempre sabes cómo hacer sentir bien a los demás 🌸",
-  "Eres luz en los días grises 💡",
-  "Tu sonrisa podría iluminar ciudades enteras 🌆",
-  "Eres un rayito de sol incluso en días nublados 🌤️",
-  "Tu entusiasmo es contagioso y lindo 🌷",
-  "Eres un arcoíris después de la tormenta 🌈",
-  "Tu presencia hace que todo sea más bonito 🌟",
-  "Eres inspiración sin siquiera intentarlo 💫",
-  "Tu corazón es gigante y lleno de amor 💛",
-  "Eres magia pura ✨",
-  "Tu forma de ser hace que todos se sientan mejor 😄",
-  "Eres un regalo que alegra la vida de otros 🎁",
-  "Tu mirada transmite paz y calma 🕊️",
-  "Eres única, y eso te hace brillante 💖",
-  "Tu risa es música para quien la escucha 🎵",
-  "Eres creatividad en acción 🎨",
-  "Tu alegría hace que los días normales sean especiales 🌸",
-  "Eres dulce como el mejor postre 🍫",
-  "Tu bondad se nota en todo lo que haces 💛",
-  "Eres como un abrazo que calma el alma 🤗",
-  "Tu energía positiva hace todo más bonito ✨",
-  "Eres un sol que nunca deja de brillar 🌞",
-  "Tu ternura derrite corazones 💗",
-  "Eres inspiración para quienes te rodean 🌷",
-  "Tu presencia ilumina cualquier lugar 🌟",
-  "Eres un soplo de felicidad 💨",
-  "Tu sonrisa es contagio de alegría 😍",
-  "Eres luz y alegría al mismo tiempo 🌈",
-  "Tu personalidad es encantadora y genuina 💖",
-  "Eres un motivo para sonreír todos los días 😊"
-];
-
+    const cumplidos = [
+      "Eres increíble tal como eres 💖",
+      "Tu sonrisa hace que todo sea mejor 😄",
+      "Tienes un estilo que siempre sorprende 👏",
+      "Eres divertida y contagias alegría 🌟",
+      "Tu mirada tiene algo que encanta 👀",
+      "Eres fuerte y eso inspira 💪",
+      "Tu risa es un regalo para quienes te rodean 🎁",
+      "Eres dulce sin esfuerzo 🍓",
+      "Siempre sabes cómo alegrar un lugar 🌈",
+      "Eres única y eso te hace especial 💕",
+      "Tu energía es imposible de ignorar ✨",
+      "Eres encantadora sin siquiera intentarlo 😍",
+      "Tu forma de ser ilumina cualquier día 🌞",
+      "Eres creativa y llena de ideas geniales 🎨",
+      "Tu alegría es contagiosa y linda 😄",
+      "Eres como un abrazo cálido en un día frío 🤗",
+      "Tu personalidad brilla más que cualquier estrella ⭐",
+      "Eres divertida y siempre haces sonreír 😌",
+      "Tu estilo y tu forma de ser combinan perfecto 👗",
+      "Eres un soplo de aire fresco 💨",
+      "Tu risa podría alegrar cualquier habitación 🎶",
+      "Eres dulce, fuerte y valiente 💖",
+      "Siempre sabes cómo hacer sentir bien a los demás 🌸",
+      "Eres luz en los días grises 💡",
+      "Tu sonrisa podría iluminar ciudades enteras 🌆",
+      "Eres un rayito de sol incluso en días nublados 🌤️",
+      "Tu entusiasmo es contagioso y lindo 🌷",
+      "Eres un arcoíris después de la tormenta 🌈",
+      "Tu presencia hace que todo sea más bonito 🌟",
+      "Eres inspiración sin siquiera intentarlo 💫",
+      "Tu corazón es gigante y lleno de amor 💛",
+      "Eres magia pura ✨",
+      "Tu forma de ser hace que todos se sientan mejor 😄",
+      "Eres un regalo que alegra la vida de otros 🎁",
+      "Tu mirada transmite paz y calma 🕊️",
+      "Eres única, y eso te hace brillante 💖",
+      "Tu risa es música para quien la escucha 🎵",
+      "Eres creatividad en acción 🎨",
+      "Tu alegría hace que los días normales sean especiales 🌸",
+      "Eres dulce como el mejor postre 🍫",
+      "Tu bondad se nota en todo lo que haces 💛",
+      "Eres como un abrazo que calma el alma 🤗",
+      "Tu energía positiva hace todo más bonito ✨",
+      "Eres un sol que nunca deja de brillar 🌞",
+      "Tu ternura derrite corazones 💗",
+      "Eres inspiración para quienes te rodean 🌷",
+      "Tu presencia ilumina cualquier lugar 🌟",
+      "Eres un soplo de felicidad 💨",
+      "Tu sonrisa es contagio de alegría 😍",
+      "Eres luz y alegría al mismo tiempo 🌈",
+      "Tu personalidad es encantadora y genuina 💖",
+      "Eres un motivo para sonreír todos los días 😊"
+    ];
 
     const btn = document.getElementById('btn');
     const out = document.getElementById('cumplido');
@@ -203,6 +244,3 @@ const cumplidos = [
   </script>
 </body>
 </html>
-<div class="mensaje-inicial">
-  💌 Hola Nicool, esta página es para recordarte lo especial que eres.🌸
-</div>
