--- a/index.html
+++ b/index.html
@@ -1,229 +1,227 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Generador de cumplidos — Nicool 💖</title>
-  <style>
-    :root {
-      --bg1: #ffd6e9;
-      --bg2: #fff0f6;
-      --accent: #ff4da6;
-      --light-accent: #ff85c1;
-      --muted: #4b4b4b;
-    }
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Generador de cumplidos — Nicool 💖</title>
+<style>
+  :root {
+    --bg1: #1f1c2c;
+    --bg2: #928dab;
+    --accent1: #ff4da6;
+    --accent2: #ff85c1;
+    --text-color: #fff;
+    --heart-color: #ff4da6;
+  }
 
-    * { box-sizing: border-box; margin: 0; padding: 0; }
+  *{box-sizing:border-box;margin:0;padding:0}
 
-    body {
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: "Poppins", system-ui, sans-serif;
-      background: linear-gradient(135deg, var(--bg1), var(--bg2));
-      overflow-x: hidden;
-      padding: 20px;
-    }
+  body{
+    min-height:100vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    font-family: "Poppins", system-ui, sans-serif;
+    background: linear-gradient(180deg,var(--bg1),var(--bg2));
+    overflow:hidden;
+    padding:20px;
+  }
 
-    /* Contenedor del generador */
-    .card {
-      width: clamp(320px, 86vw, 720px);
-      background: rgba(255, 255, 255, 0.7);
-      border-radius: 22px;
-      padding: 30px 28px;
-      text-align: center;
-      box-shadow: 0 15px 50px rgba(0, 0, 0, 0.08);
-      backdrop-filter: blur(8px);
-      position: relative;
-      animation: cardAppear 1s ease forwards;
-      opacity: 0;
-    }
+  /* Letras flotantes que caen */
+  .falling-letter {
+    position: absolute;
+    font-size: 18px;
+    color: var(--accent1);
+    opacity: 0.6;
+    user-select: none;
+    pointer-events: none;
+    animation-name: fall;
+    animation-timing-function: linear;
+  }
 
-    @keyframes cardAppear {
-      to { opacity: 1; transform: translateY(0); }
-      from { opacity: 0; transform: translateY(-20px); }
-    }
+  @keyframes fall {
+    0% { transform: translateY(-50px) rotate(0deg); opacity: 0.5; }
+    50% { opacity: 0.8; }
+    100% { transform: translateY(110vh) rotate(360deg); opacity: 0; }
+  }
 
-    h1 {
-      color: var(--accent);
-      font-size: clamp(1.6rem, 4vw, 2.2rem);
-      margin-bottom: 10px;
-      letter-spacing: 1px;
-      text-shadow: 0 0 10px #ffb3d9, 0 0 20px #fff;
-    }
+  .card {
+    width: clamp(320px, 85vw, 720px);
+    background: rgba(255,255,255,0.15);
+    border-radius: 24px;
+    padding: 30px 28px;
+    text-align:center;
+    backdrop-filter: blur(12px);
+    box-shadow: 0 20px 50px rgba(0,0,0,0.4);
+    position: relative;
+    overflow: hidden;
+    color: var(--text-color);
+    animation: fadeIn 1.2s ease forwards;
+    opacity: 0;
+  }
 
-    .subtitle {
-      color: var(--accent);
-      font-family: 'Brush Script MT','Segoe Script',cursive;
-      font-size: clamp(1.2rem, 3vw, 1.6rem);
-      text-shadow: 0 0 6px #ffb3d9, 0 0 12px #fff;
-      margin-bottom: 22px;
-    }
+  @keyframes fadeIn { to { opacity: 1; } }
 
-    .btn {
-      display: inline-block;
-      background: linear-gradient(90deg, var(--accent), var(--light-accent));
-      color: white;
-      border: none;
-      padding: 14px 26px;
-      border-radius: 14px;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: transform .2s ease, box-shadow .2s ease;
-      box-shadow: 0 8px 25px rgba(255,77,166,0.24);
-    }
+  h1{
+    font-size: clamp(1.8rem,4vw,2.4rem);
+    margin-bottom:10px;
+    text-shadow: 0 0 10px var(--accent1), 0 0 20px var(--accent2);
+  }
 
-    .btn:hover {
-      transform: scale(1.05);
-      box-shadow: 0 12px 35px rgba(255,77,166,0.3);
-    }
-    .btn:active {
-      transform: translateY(2px) scale(0.97);
-    }
+  .subtitle{
+    font-family:'Brush Script MT','Segoe Script',cursive;
+    font-size: clamp(1.2rem,3vw,1.6rem);
+    text-shadow: 0 0 8px var(--accent2);
+    margin-bottom: 24px;
+  }
 
-    #cumplido {
-      margin-top: 24px;
-      min-height: 60px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: clamp(1rem, 2.5vw, 1.3rem);
-      color: #333;
-      padding: 14px 20px;
-      border-radius: 14px;
-      background: rgba(255,255,255,0.85);
-      box-shadow: inset 0 2px 6px rgba(255,255,255,0.6);
-      opacity: 0;
-      transform: translateY(10px);
-      transition: transform 0.5s ease, opacity 0.5s ease;
-    }
+  .btn{
+    display:inline-block;
+    background: linear-gradient(90deg,var(--accent1),var(--accent2));
+    color:white;
+    border:none;
+    padding:14px 26px;
+    border-radius:16px;
+    font-size:1rem;
+    cursor:pointer;
+    transition: transform .2s ease, box-shadow .2s ease;
+    box-shadow: 0 8px 30px rgba(255,77,166,0.6);
+    margin-top:10px;
+  }
+  .btn:hover {
+    transform: scale(1.08);
+    box-shadow: 0 12px 40px rgba(255,77,166,0.8);
+  }
+  .btn:active {
+    transform: scale(0.97);
+  }
 
-    .show {
-      transform: translateY(0);
-      opacity: 1;
-    }
+  #cumplido{
+    margin-top:24px;
+    min-height:60px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size: clamp(1rem,2.5vw,1.3rem);
+    color:#fff;
+    padding:16px 20px;
+    border-radius:14px;
+    background: rgba(0,0,0,0.3);
+    text-shadow: 0 0 6px #ff85c1, 0 0 12px #ff4da6;
+    opacity:0;
+    transform: translateY(10px);
+    transition: transform 0.5s ease, opacity 0.5s ease;
+  }
 
-    /* Corazones flotantes */
-    .heart {
-      position: absolute;
-      width: 20px; height: 20px;
-      transform: rotate(-45deg);
-      opacity: 0.8;
-      pointer-events: none;
-      animation: floatHeart 6s linear infinite;
-    }
-    .heart::before, .heart::after {
-      content: "";
-      position: absolute;
-      width: 20px; height: 20px;
-      background: var(--accent);
-      border-radius: 50%;
-    }
-    .heart::after { left: 10px; }
+  .show{
+    transform: translateY(0);
+    opacity: 1;
+  }
 
-    .h1 { left: 10%; top: 15%; animation-duration: 6s; }
-    .h2 { left: 85%; top: 20%; animation-duration: 7s; transform: scale(0.9); }
-    .h3 { left: 25%; top: 75%; animation-duration: 5.5s; transform: scale(0.8); }
-    .h4 { left: 70%; top: 80%; animation-duration: 6.5s; transform: scale(0.75); opacity: 0.8; }
-
-    @keyframes floatHeart {
-      0% { transform: translateY(0) rotate(-45deg); }
-      50% { transform: translateY(-20px) rotate(-45deg); }
-      100% { transform: translateY(0) rotate(-45deg); }
-    }
-
-    @media (max-width: 420px) {
-      .card { padding: 20px; border-radius: 16px; }
-      #cumplido { font-size: 1rem; min-height: 64px; }
-      h1 { font-size: 1.5rem; }
-      .subtitle { font-size: 1.2rem; }
-      .btn { padding: 12px 20px; font-size: 0.95rem; }
-    }
-  </style>
+  @media (max-width:420px){
+    .card { padding: 22px; border-radius: 20px; }
+    #cumplido { font-size:1rem; min-height:64px; }
+    h1 { font-size:1.6rem; }
+    .subtitle { font-size:1.2rem; }
+    .btn { padding:12px 20px; font-size:0.95rem; }
+  }
+</style>
 </head>
 <body>
-  <div class="card">
-    <h1>💖 Generador de cumplidos para Nicool 💖</h1>
-    <div class="subtitle">para la niña con los ojitos más hermosos ✨</div>
 
-    <button class="btn" id="btn">Dame un cumplido 🌸</button>
-    <div id="cumplido"></div>
+<div class="card">
+  <h1>💖 Generador de cumplidos para Nicool 💖</h1>
+  <div class="subtitle">para la niña con los ojitos más hermosos ✨</div>
 
-    <div class="heart h1"></div>
-    <div class="heart h2"></div>
-    <div class="heart h3"></div>
-    <div class="heart h4"></div>
-  </div>
+  <button class="btn" id="btn">Dame un cumplido 🌸</button>
+  <div id="cumplido"></div>
+</div>
 
-  <script>
-    const cumplidos = [
-      "Eres increíble tal como eres 💖",
-      "Tu sonrisa hace que todo sea mejor 😄",
-      "Tienes un estilo que siempre sorprende 👏",
-      "Eres divertida y contagias alegría 🌟",
-      "Tu mirada tiene algo que encanta 👀",
-      "Eres fuerte y eso inspira 💪",
-      "Tu risa es un regalo para quienes te rodean 🎁",
-      "Eres dulce sin esfuerzo 🍓",
-      "Siempre sabes cómo alegrar un lugar 🌈",
-      "Eres única y eso te hace especial 💕",
-      "Tu energía es imposible de ignorar ✨",
-      "Eres encantadora sin siquiera intentarlo 😍",
-      "Tu forma de ser ilumina cualquier día 🌞",
-      "Eres creativa y llena de ideas geniales 🎨",
-      "Tu alegría es contagiosa y linda 😄",
-      "Eres como un abrazo cálido en un día frío 🤗",
-      "Tu personalidad brilla más que cualquier estrella ⭐",
-      "Eres divertida y siempre haces sonreír 😌",
-      "Tu estilo y tu forma de ser combinan perfecto 👗",
-      "Eres un soplo de aire fresco 💨",
-      "Tu risa podría alegrar cualquier habitación 🎶",
-      "Eres dulce, fuerte y valiente 💖",
-      "Siempre sabes cómo hacer sentir bien a los demás 🌸",
-      "Eres luz en los días grises 💡",
-      "Tu sonrisa podría iluminar ciudades enteras 🌆",
-      "Eres un rayito de sol incluso en días nublados 🌤️",
-      "Tu entusiasmo es contagioso y lindo 🌷",
-      "Eres un arcoíris después de la tormenta 🌈",
-      "Tu presencia hace que todo sea más bonito 🌟",
-      "Eres inspiración sin siquiera intentarlo 💫",
-      "Tu corazón es gigante y lleno de amor 💛",
-      "Eres magia pura ✨",
-      "Tu forma de ser hace que todos se sientan mejor 😄",
-      "Eres un regalo que alegra la vida de otros 🎁",
-      "Tu mirada transmite paz y calma 🕊️",
-      "Eres única, y eso te hace brillante 💖",
-      "Tu risa es música para quien la escucha 🎵",
-      "Eres creatividad en acción 🎨",
-      "Tu alegría hace que los días normales sean especiales 🌸",
-      "Eres dulce como el mejor postre 🍫",
-      "Tu bondad se nota en todo lo que haces 💛",
-      "Eres como un abrazo que calma el alma 🤗",
-      "Tu energía positiva hace todo más bonito ✨",
-      "Eres un sol que nunca deja de brillar 🌞",
-      "Tu ternura derrite corazones 💗",
-      "Eres inspiración para quienes te rodean 🌷",
-      "Tu presencia ilumina cualquier lugar 🌟",
-      "Eres un soplo de felicidad 💨",
-      "Tu sonrisa es contagio de alegría 😍",
-      "Eres luz y alegría al mismo tiempo 🌈",
-      "Tu personalidad es encantadora y genuina 💖",
-      "Eres un motivo para sonreír todos los días 😊"
-    ];
+<script>
+const cumplidos = [
+  "Eres increíble tal como eres 💖",
+  "Tu sonrisa hace que todo sea mejor 😄",
+  "Tienes un estilo que siempre sorprende 👏",
+  "Eres divertida y contagias alegría 🌟",
+  "Tu mirada tiene algo que encanta 👀",
+  "Eres fuerte y eso inspira 💪",
+  "Tu risa es un regalo para quienes te rodean 🎁",
+  "Eres dulce sin esfuerzo 🍓",
+  "Siempre sabes cómo alegrar un lugar 🌈",
+  "Eres única y eso te hace especial 💕",
+  "Tu energía es imposible de ignorar ✨",
+  "Eres encantadora sin siquiera intentarlo 😍",
+  "Tu forma de ser ilumina cualquier día 🌞",
+  "Eres creativa y llena de ideas geniales 🎨",
+  "Tu alegría es contagiosa y linda 😄",
+  "Eres como un abrazo cálido en un día frío 🤗",
+  "Tu personalidad brilla más que cualquier estrella ⭐",
+  "Eres divertida y siempre haces sonreír 😌",
+  "Tu estilo y tu forma de ser combinan perfecto 👗",
+  "Eres un soplo de aire fresco 💨",
+  "Tu risa podría alegrar cualquier habitación 🎶",
+  "Eres dulce, fuerte y valiente 💖",
+  "Siempre sabes cómo hacer sentir bien a los demás 🌸",
+  "Eres luz en los días grises 💡",
+  "Tu sonrisa podría iluminar ciudades enteras 🌆",
+  "Eres un rayito de sol incluso en días nublados 🌤️",
+  "Tu entusiasmo es contagioso y lindo 🌷",
+  "Eres un arcoíris después de la tormenta 🌈",
+  "Tu presencia hace que todo sea más bonito 🌟",
+  "Eres inspiración sin siquiera intentarlo 💫",
+  "Tu corazón es gigante y lleno de amor 💛",
+  "Eres magia pura ✨",
+  "Tu forma de ser hace que todos se sientan mejor 😄",
+  "Eres un regalo que alegra la vida de otros 🎁",
+  "Tu mirada transmite paz y calma 🕊️",
+  "Eres única, y eso te hace brillante 💖",
+  "Tu risa es música para quien la escucha 🎵",
+  "Eres creatividad en acción 🎨",
+  "Tu alegría hace que los días normales sean especiales 🌸",
+  "Eres dulce como el mejor postre 🍫",
+  "Tu bondad se nota en todo lo que haces 💛",
+  "Eres como un abrazo que calma el alma 🤗",
+  "Tu energía positiva hace todo más bonito ✨",
+  "Eres un sol que nunca deja de brillar 🌞",
+  "Tu ternura derrite corazones 💗",
+  "Eres inspiración para quienes te rodean 🌷",
+  "Tu presencia ilumina cualquier lugar 🌟",
+  "Eres un soplo de felicidad 💨",
+  "Tu sonrisa es contagio de alegría 😍",
+  "Eres luz y alegría al mismo tiempo 🌈",
+  "Tu personalidad es encantadora y genuina 💖",
+  "Eres un motivo para sonreír todos los días 😊"
+];
 
-    const btn = document.getElementById('btn');
-    const out = document.getElementById('cumplido');
+const btn = document.getElementById('btn');
+const out = document.getElementById('cumplido');
 
-    function mostrarCumplido() {
-      const i = Math.floor(Math.random() * cumplidos.length);
-      out.textContent = cumplidos[i];
-      out.classList.remove('show');
-      void out.offsetWidth;
-      out.classList.add('show');
-    }
+function mostrarCumplido() {
+  const i = Math.floor(Math.random() * cumplidos.length);
+  out.textContent = cumplidos[i];
+  out.classList.remove('show');
+  void out.offsetWidth;
+  out.classList.add('show');
+}
+btn.addEventListener('click', mostrarCumplido);
 
-    btn.addEventListener('click', mostrarCumplido);
-  </script>
+/* Animación de letras que caen */
+const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz✨💖🌸💫";
+function createFallingLetter() {
+  const span = document.createElement('span');
+  span.className = 'falling-letter';
+  span.style.left = Math.random() * 100 + 'vw';
+  span.style.fontSize = (10 + Math.random() * 24) + 'px';
+  span.style.color = `hsl(${Math.random()*360}, 80%, 70%)`;
+  span.style.animationDuration = (4 + Math.random()*4) + 's';
+  span.textContent = letters[Math.floor(Math.random() * letters.length)];
+  document.body.appendChild(span);
+
+  setTimeout(() => {
+    span.remove();
+  }, 8000);
+}
+setInterval(createFallingLetter, 200);
+</script>
 </body>
 </html>
