--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 }
 
 /* Reset */
-* { box-sizing: border-box; margin:0; padding:0; }
+* { box-sizing: border-box; margin:0; padding:0 }
 
 body {
   min-height:100vh;
@@ -27,21 +27,19 @@ body {
   padding:20px;
 }
 
-/* Cartas flotantes de frases */
+/* Frases flotantes que caen */
 .falling-text {
   position: absolute;
-  font-size: 14px;
   font-weight: 600;
   opacity: 0.8;
   pointer-events: none;
   white-space: nowrap;
-  color: #ff85c1;
   animation-name: fallText;
   animation-timing-function: linear;
 }
 
 @keyframes fallText {
-  0% { transform: translateY(-50px); opacity: 0; }
+  0% { transform: translateY(-30px); opacity: 0; }
   10% { opacity: 1; }
   100% { transform: translateY(110vh); opacity: 0; }
 }
@@ -86,10 +84,7 @@ h1 {
   box-shadow: 0 8px 30px rgba(255,77,166,0.6);
   margin-top:10px;
 }
-.btn:hover {
-  transform: scale(1.08);
-  box-shadow: 0 12px 40px rgba(255,77,166,0.8);
-}
+.btn:hover { transform: scale(1.08); box-shadow: 0 12px 40px rgba(255,77,166,0.8); }
 .btn:active { transform: scale(0.97); }
 
 /* Cuadro de cumplido */
@@ -187,19 +182,12 @@ const cumplidos = [
 ];
 
 const cuteTexts = [
-  "💖 Eres genial!",
-  "✨ Qué linda sonrisa!",
-  "🌸 Eres un rayito de sol",
-  "💫 Brillas mucho!",
-  "😍 Qué linda energía",
-  "🌷 Siempre iluminas",
-  "🎶 Tu risa es música",
-  "💛 Corazón gigante!"
+  "💖 Yay!", "✨ Wow!", "🌸 Cute!", "💫 Hi!", "😍 Yes!", "🌷 Fun!", "🎶 Yay!", "💛 Wow!"
 ];
 
+// Botón funciona perfectamente
 const btn = document.getElementById('btn');
 const out = document.getElementById('cumplido');
-
 btn.addEventListener('click', () => {
   const i = Math.floor(Math.random() * cumplidos.length);
   out.textContent = cumplidos[i];
@@ -208,19 +196,20 @@ btn.addEventListener('click', () => {
   out.classList.add('show');
 });
 
-/* Frases que caen desde arriba */
+// Frases cortas que caen
 function createFallingText() {
   const span = document.createElement('span');
   span.className = 'falling-text';
   span.style.left = Math.random() * 100 + 'vw';
-  span.style.fontSize = (12 + Math.random()*18) + 'px';
+  span.style.fontSize = (14 + Math.random()*12) + 'px';
   span.style.color = `hsl(${Math.random()*360},80%,70%)`;
-  span.style.animationDuration = (4 + Math.random()*4) + 's';
+  span.style.animationDuration = (5 + Math.random()*4) + 's';
+  span.style.top = "-30px"; // Arriba de todo
   span.textContent = cuteTexts[Math.floor(Math.random()*cuteTexts.length)];
   document.body.appendChild(span);
-  setTimeout(() => { span.remove(); }, 8000);
+  setTimeout(() => { span.remove(); }, 9000);
 }
-setInterval(createFallingText, 250);
+setInterval(createFallingText, 500); // Más lento y menos saturado
 </script>
 </body>
 </html>
