--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@ h1 {
 
   <button class="btn" id="btn">Dame un cumplido 🌸</button>
   <div id="cumplido"></div>
+
+    <div class="heart h1"></div>
+    <div class="heart h2"></div>
+    <div class="heart h3"></div>
+    <div class="heart h4"></div>
 </div>
 
 <script>
